<resources>
    <string name="app_name">DigitaraAndroidApplication</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="our_location">Our Location</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="project_id">digitara-app</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="team_video">https://content.jwplatform.com/videos/EGGWbSmf-XQabnbM9.mp4</string>
    <string name="textview">TextView</string>
    <string name="title_activity_location">Map</string>
    <string name="google_api_key">AIzaSyBAi62Urndbs6uapDfeze_0VpDGUKjWC78</string>
    <string name="google_app_id">1:40990677101:android:71de09ab2213e013150764</string>
    <string name="google_crash_reporting_api_key">AIzaSyBAi62Urndbs6uapDfeze_0VpDGUKjWC78</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="google_maps_key">AIzaSyCMkWX9OjNT0T4y96u1GcgdYGQS88IhVnY</string>
    <string name="contact_us">Contact Us</string>
    <string name="menu_about">About</string>

    <string name="menu_home">Home</string>
    <string name="menu_portfolio">Portfolio</string>
    <string name="menu_services">Services</string>
    <string name="menu_team">Our Team</string>
    <string name="title_activity_maps">Map</string>
</resources>