<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.digitara.digitaraandroidapplication.ui.HomeFragment"
        android:label="@string/menu_home" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.digitara.digitaraandroidapplication.ui.AboutFragment"
        android:label="@string/menu_about" />
    <fragment
        android:id="@+id/nav_services"
        android:name="com.digitara.digitaraandroidapplication.ui.ServicesFragment"
        android:label="@string/menu_services" />
    <fragment
        android:id="@+id/nav_team"
        android:name="com.digitara.digitaraandroidapplication.ui.TeamFragment"
        android:label="@string/menu_team" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="com.digitara.digitaraandroidapplication.ui.ContactFragment"
        android:label="@string/contact_us" />
    <fragment
        android:id="@+id/nav_location"
        android:name="com.digitara.digitaraandroidapplication.ui.LocationFragment"
        android:label="@string/our_location" />
    <fragment
        android:id="@+id/nav_portfolio"
        android:name="com.digitara.digitaraandroidapplication.ui.PortfolioFragment"
        android:label="@string/menu_portfolio" />
</navigation>
