<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_baseline_services"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_baseline_team"
            android:title="@string/menu_team" />
        <item
            android:id="@+id/nav_portfolio"
            android:icon="@drawable/ic_baseline_work"
            android:title="@string/menu_portfolio" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_contact"
            android:title="@string/contact_us" />
    </group>
</menu>
